service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saloni-service
  namespace: saloni-app
spec:
  selector:
    app: saloni-apps
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
